--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Page Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="author" content="Ashley Duke">
+    <meta name="description" content="Assignment portal for Ashley Duke in CIT 230: Web Fronted Development at BYU-Idaho, 2020 Winter.">
+    <title>Ashley's Cool Website</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
-    <h1>This is a Heading</h1>
+    <h1>Hello World</h1>
     <p>This is a paragraph.</p>
-
 </body>
 </html>
