--- a/index.html
+++ b/index.html
@@ -3,13 +3,33 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="author" content="Ashley Duke">
     <meta name="description" content="Assignment portal for Ashley Duke in CIT 230: Web Fronted Development at BYU-Idaho, 2020 Winter.">
     <title>Ashley's Cool Website</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="script.js"></script>
 </head>
 <body>
-    <h1>Hello World</h1>
-    <p>This is a paragraph.</p>
+<div id="wrapper">
+    <header>
+        <h1 id="title">Ashley Duke</h1>
+    </header>
+</div>
+<main>
+<h2>CIT 230 Assignment Portal</h2>
+<br>
+<img src="IMG_2615 edit.jpg" alt="Ashley standing on a cliff with lots of ocean behind her. The Makapu'u Lighthouse trail on Oahu, Hawaii.">
+<ul>
+    <li>Lesson 02 | <a href="designprin.html">Design Principles</a></li>
+    <li>Lesson 03 | <a href="/weather/index.html">Weather Site Plan</a></li>
+    <li>Lesson 04 | </li>
+    <li>Lesson 06 | </li>
+</ul>
+</main>
+<footer>
+<p>&copy; | Ashley Duke | <a href="https://developer.mozilla.org/en-US/"> MDN Documentation Site</a> | BYU-Idaho</p>
+<span id="lastModified"></span>
+</footer>
 </body>
 </html>
