--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <main>
 <h2>CIT 230 Assignment Portal</h2>
 <br>
-<img src="IMG_2615 edit.jpg" alt="Ashley standing on a cliff with lots of ocean behind her. The Makapu'u Lighthouse trail on Oahu, Hawaii.">
+<img src="IMG_2615small.jpg" alt="Ashley standing on a cliff with lots of ocean behind her. The Makapu'u Lighthouse trail on Oahu, Hawaii.">
 <ul>
     <li>Lesson 02 | <a href="designprin.html">Design Principles</a></li>
     <li>Lesson 03 | <a href="/weather/index.html">Weather Site Plan</a></li>
