design page and copyright

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </ul>
 </main>
 <footer>
-<p>&copy; | Ashley Duke | <a href="https://developer.mozilla.org/en-US/"> MDN Documentation Site</a> | BYU-Idaho</p>
+<p>&copy; 2020 | Ashley Duke | <a href="https://developer.mozilla.org/en-US/"> MDN Documentation Site</a> | BYU-Idaho</p>
 <span id="lastModified"></span>
 </footer>
 </body>
