--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Ashley's Cool Website</title>
     <link rel="stylesheet" href="styles.css">
     <script src="script.js"></script>
+    <link rel="shortcut icon" href="favicon.ico">
 </head>
 <body>
 <div id="wrapper">
