--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <li>Lesson 02 | <a href="designprin.html">Design Principles</a></li>
     <li>Lesson 03 | <a href="/weather/index.html">Weather Site Plan</a></li>
     <li>Lesson 04 | </li>
-    <li>Lesson 06 | </li>
+    <li>Lesson 06 | <a href="/weather/weather-images.html">Progressive Loading Images</a></li>
 </ul>
 </main>
 <footer>
