progressive images sizes

--- a/weather/weather-images.html
+++ b/weather/weather-images.html
@@ -15,28 +15,23 @@
 </header>
 <main>
 <picture>
-    <source srcset="/weather/clear-p.jpg" media="(min-width: 500px) and (max-width: 799px)">
-    <source srcset="/weather/clear.jpg" media="(min-width: 800px)">
+    <source srcset="/weather/clear-p.jpg" media="(max-width: 800px)">
     <img src="/weather/placeholder.jpg" data-src="/weather/clear.jpg" alt="Clear Weather">
 </picture>
 <picture>
-    <source srcset="/weather/clouds-p.jpg" media="(min-width: 500px) and (max-width: 799px)">
-    <source srcset="/weather/clouds.jpg" media="(min-width: 800px)">
+    <source srcset="/weather/clouds-p.jpg" media="(max-width: 800px)">
     <img src="/weather/placeholder.jpg" data-src="/weather/clouds.jpg" alt="Cloudy Weather">
 </picture>
 <picture>
-    <source srcset="/weather/fog-p.jpg" media="(min-width: 500px) and (max-width: 799px)">
-    <source srcset="/weather/fog.jpg" media="(min-width: 800px)">
+    <source srcset="/weather/fog-p.jpg" media="(max-width: 800px)">
     <img src="/weather/placeholder.jpg" data-src="/weather/fog.jpg" alt="Foggy Weather">
 </picture>
 <picture>
-    <source srcset="/weather/rain-p.jpg" media="(min-width: 500px) and (max-width: 799px)">
-    <source srcset="/weather/rain.jpg" media="(min-width: 800px)">
+    <source srcset="/weather/rain-p.jpg" media="(max-width: 800px)">
     <img src="/weather/placeholder.jpg" data-src="/weather/rain.jpg" alt="Rainy Weather">
 </picture>
 <picture>
-    <source srcset="/weather/snow-p.jpg" media="(min-width: 500px) and (max-width: 799px)">
-    <source srcset="/weather/snow.jpg" media="(min-width: 800px)">
+    <source srcset="/weather/snow-p.jpg" media="(max-width: 800px)">
     <img src="/weather/placeholder.jpg" data-src="/weather/snow.jpg" alt="Snowy Weather">
 </picture>
 </main>
